# mcp-vector-search

./: .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  LICENSE  OLLAMA_SETUP.md  README.md  pyproject.toml
code_search_mcp/: __init__.py  __main__.py  database_updater.py  env_config.py  file_processor.py  project_analyzer.py  searcher.py  server.py
code_search_mcp/aifilter/: __init__.py  ai_filter.py
code_search_mcp/aifilter/prompts/: v4_precision.md
code_search_mcp/embedding_providers/: __init__.py  base.py  ollama.py  openai_provider.py  utils.py  voyage.py  voyage_context.py
code_search_mcp/hybrid/: __init__.py  bm25_search.py  hybrid_searcher.py  rrf_fusion.py  text_processor.py
