[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-vector-search"
version = "0.3.0"
description = "MCP server for semantic code and documentation search via vector embeddings (Voyage / OpenAI / Ollama)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Aleksandr Ilinskii", email = "ilinskiy.a@gmail.com" }
]
keywords = ["mcp", "vector-search", "embeddings", "semantic-search", "claude", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=0.2.0",
    "chromadb>=0.4.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
voyage = ["voyageai>=0.2.0"]
openai = ["openai>=1.0.0"]
ollama = ["ollama>=0.3.0"]
all = [
    "voyageai>=0.2.0",
    "openai>=1.0.0",
    "ollama>=0.3.0",
]

[project.scripts]
mcp-vector-search = "code_search_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Amico1285/mcp-vector-search"
Repository = "https://github.com/Amico1285/mcp-vector-search"
Issues = "https://github.com/Amico1285/mcp-vector-search/issues"

[tool.hatch.build.targets.wheel]
packages = ["code_search_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"code_search_mcp/aifilter/prompts" = "code_search_mcp/aifilter/prompts"
